# miniML-interpreter

miniML/: LICENSE  dune  dune-project  miniML.opam
miniML/lib/forest/: dune
miniML/lib/inferencer/: dune
miniML/lib/interpreter/: dune
miniML/lib/parser/: dune
miniML/tests/: dune
